--- a/fbm_app/pubspec.yaml
+++ b/fbm_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^12.1.3  # Check for the latest version
   image: ^3.0.0  # Check for the latest version
   path_provider: ^2.0.9
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
